# stsynphot_refactor

./: .bandit.yaml  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  CITATION  CITATION.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-cron.yml  azure-pipelines.yml  azure-templates.yml  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: check_milestone.yml  ci_workflows.yml  codeql-analysis.yml  open_actions.yml  predeps_workflow.yml  publish-to-pypi.yml
archived_docs/: README.md
docs/: Makefile  conf.py  index.rst  make.bat  rtd-pip-requirements
docs/source/: catalog.rst  conf.py  graphtab.rst  index.rst  locations.rst  refs.rst  reseltable.rst  spark.rst  spparser.rst  tables.rst  wavetable.rst
docs/stsynphot/: accuracy.rst  appb_ref.txt  appendixa.rst  appendixb.rst  appendixb_inflight.rst  appendixb_legacy.rst  appendixb_nonhst.rst  appendixb_specialkey.rst  appendixc.rst  biblio.rst  catalog.rst  commissioning.rst  config.rst  crds.rst  data_atlas.rst  data_hst.rst  data_jwst.rst  from_pysyn_iraf.rst  graphtab.rst  index.rst  observationmode.rst  obsmode.rst  overview.rst  ref_api.rst  refdata.rst  spectrum.rst  tables.rst  tutorials.rst
legacy_materials/: README.md
licenses/: README.rst  SPARK_LICENSE.rst
old_tests/: README.md
stsynphot/: __init__.py  _astropy_init.py  catalog.py  config.py  conftest.py  constant.py  exceptions.py  graphtab.py  io.py  locations.py  obsbandpass.py  observationmode.py  refs.py  reseltable.py  setup_package.py  spark.py  spectrum.py  spparser.py  stexceptions.py  stio.py  stspectrum.py  stsynphot.cfg  tables.py  wavetable.py
stsynphot/commissioning/: __init__.py  setup_package.py  utils.py
stsynphot/commissioning/tests/: __init__.py  test_acs_0001.py  test_acs_comm1.py  test_acs_hrc.py  test_acs_sbc.py  test_acs_wfc.py  test_stis_0001.py  test_stis_ccd.py  test_stis_fuvmama.py  test_stis_nuvmama.py  test_wfc3_ir.py  test_wfc3_ir_0003.py  test_wfc3_uvis1.py  test_wfc3_uvis2.py  test_wfc3_uvis_0002.py
stsynphot/data/: irafshortcuts.txt
stsynphot/tests/: coveragerc  pdk_contacts  setup_package.py  test_catalog.py  test_config.py  test_io.py  test_obsbandpass.py  test_observationmode.py  test_parser.py  test_spectrum.py  test_stio.py  test_tables.py  test_wavetable.py
stsynphot/tests/data/: tables_primarea_tmg.fits  tables_tmc.fits  tables_tmg.fits  tables_tmt.fits
tests/: cos_etc_test.py  test_observation.py  test_primary_area.py  ticket157.py  ui_tickets.py  v05_tickets.py
