[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
norecursedirs = build docs/_build stsynphot/data stsynphot/commissioning
addopts = --doctest-rst
doctest_plus = enabled
text_file_format = rst
xfail_strict = true

[ah_bootstrap]
auto_use = True

[metadata]
name = stsynphot
version = 0.2.0
description = Synthetic photometry for HST/JWST
long_description = Synthetic photometry utilities for HST/JWST
author = STScI
author_email = help@stsci.edu
license = BSD
url = http://www.github.com/spacetelescope/stsynphot_refactor
edit_on_github = False
github_project = spacetelescope/stsynphot_refactor
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[flake8]
# Ignoring these for now:
# I100: import statements are in the wrong order
# I201: Missing newline before sections or imports
# W504: line break after binary operator
ignore = I100,I201,W504
exclude = setup.py,stsynphot/__init__.py,conftest.py,spark.py,spparser.py
