[tool:pytest]
minversion = 3.1
testpaths = "synphot" "docs"
norecursedirs = build docs/_build stsynphot/data stsynphot/commissioning
astropy_header = true
addopts = --doctest-rst
doctest_plus = enabled
text_file_format = rst
xfail_strict = true
filterwarnings =
    ignore:BlackBody provides the same capabilities
    ignore:The MexicanHat1D class is deprecated

[metadata]
name = stsynphot
description = Synthetic photometry for HST/JWST
long_description = Synthetic photometry utilities for HST/JWST
long_description_content_type = text/plain
keywords = astronomy, astrophysics, synthetic, photometry, HST, JWST
author = STScI
author_email = help@stsci.edu
license = BSD
license_file = LICENSE
url = https://www.github.com/spacetelescope/stsynphot_refactor
edit_on_github = False
github_project = spacetelescope/stsynphot_refactor
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
install_requires =
    numpy>=1.13
    astropy>=2
    synphot
    beautifulsoup4
python_requires = >=3.5

[options.extras_require]
test =
    pytest-astropy
    ci-watson
docs =
    numpy
    scipy
    matplotlib
    sphinx-astropy
    astropy
    synphot

[options.package_data]
stsynphot = data/*.*, data/wavecats/*
stsynphot.tests = coveragerc, data/*
stsynphot.commissioning.tests = data/*

[flake8]
# Ignoring these for now:
# I100: import statements are in the wrong order
# I201: Missing newline before sections or imports
# W504: line break after binary operator
ignore = I100,I201,W504
exclude = spark.py,spparser.py
