[tool:pytest]
minversion = 5
testpaths = "stsynphot" "docs"
norecursedirs = build docs/_build stsynphot/data stsynphot/commissioning
astropy_header = true
addopts = --doctest-rst --doctest-ignore-import-errors
doctest_plus = enabled
text_file_format = rst
xfail_strict = true
filterwarnings =
    error
    ignore:numpy\.ufunc size changed:RuntimeWarning
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:.*Column disp option
    ignore:BlackBody provides the same capabilities
    ignore:The MexicanHat1D class is deprecated

[metadata]
name = stsynphot
description = Synthetic photometry for HST
long_description = Synthetic photometry utilities for HST
long_description_content_type = text/plain
keywords = astronomy, astrophysics, synthetic, photometry, HST
author = STScI
author_email = help@stsci.edu
license = BSD
license_file = LICENSE
url = https://www.github.com/spacetelescope/stsynphot_refactor
edit_on_github = False
github_project = spacetelescope/stsynphot_refactor
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
    numpy>=1.16
    astropy>=3.2
    scipy>=1.1
    synphot
    beautifulsoup4
python_requires = >=3.6

[options.extras_require]
all =
    matplotlib
test =
    pytest-astropy
    ci-watson
docs =
    sphinx-astropy

[options.package_data]
stsynphot = data/*.*, data/wavecats/*
stsynphot.tests = data/*
stsynphot.commissioning.tests = data/*

[flake8]
# Ignoring these for now:
# I100: import statements are in the wrong order
# I201: Missing newline before sections or imports
# W504: line break after binary operator
ignore = I100,I201,W504
exclude = spark.py,spparser.py

[coverage:run]
source = stsynphot
omit =
    stsynphot/_astropy_init*
    stsynphot/tests/*
    stsynphot/*/tests/*
    stsynphot/*/*/tests/*
    stsynphot/version*
    */stsynphot/_astropy_init*
    */stsynphot/tests/*
    */stsynphot/*/tests/*
    */stsynphot/*/*/tests/*
    */stsynphot/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
